--- a/resume_detail.html
+++ b/resume_detail.html
@@ -13,13 +13,14 @@
 
 </head>
 <body>
-    <div class="header">
-        <img src="./logo.svg" alt="logo_section">
-        <div class="header_txt">
-            Back to HOME
+    <a href="./index.html">
+        <div class="header">
+            <img src="./logo.svg" alt="logo_section">
+            <div class="header_txt">
+                Back to HOME
+            </div>
         </div>
-    </div>
-    
+    </a>
     <div class="container_wrap">
 
         <div class="contents_title">
